# lowresrmx

./: .clangd  .editorconfig  .gitignore  .gitmodules  ARCHITECTURE.md  LICENSE  README.md  TODO.md  player.wasm  privacy-policy.html  stignore  terms-of-service.html
.zed/: settings.json
app.desktop/: CMakeLists.txt
app.ios/LowResRMX/: Info.plist
app.ios/LowResRMX.xcodeproj/: project.pbxproj
app.ios/Widgets/: ProgramModel.swift
asset.dev/: README.md  famicube-32.xcf  logo.af  logo.afdesign  logo.idraw  manual.md  social-logo.psd
asset.manual/: manual.html
asset.programs/: COLORS.nx  Color Picker.rmx  Demo Color.rmx  Demo Easing.rmx  Demo Layout.rmx  Disk.nx  Disk.rmx  FIREWORK.nx  Fanesia Editor.nx  GFX 0.10.nx  GFX 0.14.nx  GFX 0.16.nx  GFX 0.18.nx  GFX 0.23.nx  GFX 0.25.nx  GFX 0.30.nx  GFX 0.34.nx  GFX.167.rmx  GFX.169.rmx  GFX.170.rmx  GFX.174.rmx  GFX.176.rmx  GFX.177.rmx  GFX.179.rmx  GFX.180.rmx  GFX.183.rmx  GFX.184.rmx  GFX.185.rmx  GFX.186.rmx  GFX.187.rmx  GFX.188.rmx  GFX_EDITOR.nx  Gfx Designer 2.1.nx  Gfx Designer 2.1.rmx  Gfx Designer 2.2.rmx  Old GFX.rmx  PALED.rmx  PARTICLE.nx  Particles explorer.nx  README.rmx  (+10 more)
asset.public/: ret.ro.it-privacy-policy.html
backend.core/: boot_intro.c  core.c  core.h  core_delegate.c  core_delegate.h  core_stats.c  core_stats.h  log.c  pcg_basic.c
backend.core/accessories/: disk_drive.c  disk_drive.h
backend.core/datamanager/: data_manager.c  data_manager.h
backend.core/interpreter/: cmd_audio.c  cmd_audio.h  cmd_background.c  cmd_background.h  cmd_control.c  cmd_control.h  cmd_data.c  cmd_data.h  cmd_files.c  cmd_files.h  cmd_io.c  cmd_io.h  cmd_maths.c  cmd_memory.c  cmd_memory.h  cmd_particle.c  cmd_particle.h  cmd_screen.c  cmd_screen.h  cmd_sprites.c  cmd_sprites.h  cmd_strings.c  cmd_subs.c  cmd_subs.h  cmd_text.c  cmd_text.h  cmd_variables.c  cmd_variables.h  data.c  data.h  error.c  error.h  interpreter.c  interpreter.h  interpreter_config.h  interpreter_utils.h  labels.c  rcstring.c  string_utils.c  string_utils.h  (+6 more)
backend.core/libraries/: audio_lib.c  audio_lib.h  particles_lib.c  particles_lib.h  sprites_lib.c  startup_sequence.c  text_lib.c  text_lib.h
backend.core/machine/: audio_chip.c  io_chip.h  machine.c  machine.h  video_chip.c  video_chip.h
backend.core/overlay/: overlay.c  overlay.h  overlay_data.h  overlay_debugger.c  overlay_debugger.h
community-website/: README.md
community-website/sources/: dump.rdb  index.css  index.html  index.js  index.php
dev-programs/: ROM.nx  SAVE_LOAD.nx
engine-backend/: core.h  core_delegate.c
engine-backend/datamanager/: data_manager.h
engine-backend/interpreter/: cmd_audio.c  cmd_control.h  cmd_maths.c  cmd_maths.h  cmd_particle.c  cmd_screen.c  cmd_sprites.c  cmd_text.h  error.c  error.h  interpreter.c  interpreter_config.h  interpreter_utils.c
engine-backend/libraries/: text_lib.c
engine-backend/machine/: machine.c  machine.h
engine-backend/overlay/: overlay.h  overlay_data.c
frontend.sdl/: config.h  dev_menu.c  dev_menu.h  dev_menu_data.h  main.c  runner.c  screenshot.c  settings.c  stb_image_write.h  system_paths.c
frontent.myself/: platform.h  timer.c  timer.h
ios-app/LowRes NX Coder/: AppDelegate.swift  Info.plist
ios-app/LowResRMX/: LowResRMX-Bridging-Header.h
ios-app/LowResRMX.xcodeproj/: project.pbxproj
ios-app/Widgets/: Info.plist
linux-app/: CMakeLists.txt
plugin.vscode/: CHANGELOG.md  package-lock.json  package.json
plugin.vscode/src/: extension.ts
plugin.vscode/syntaxes/: nx.tmLanguage.json  rmx.tmLanguage.json
project.cmake/: CMakeLists.txt  README.md
project.flutter/: README.md
project.flutter/client_app/: README.md  pubspec.yaml
project.flutter/core_plugin/: .metadata  README.md  ffigen.yaml  pubspec.yaml
project.flutter/core_plugin/src/: CMakeLists.txt  core.c  core.h  core_plugin.c  core_plugin.h
project.flutter/texture_plugin/: .metadata  README.md  pubspec.yaml
project.flutter/tool/: README.md  merge_core.h  merge_core_src.bash
project.ios/LowResRMX/: AppDelegate.swift  Boot Intro.rmx  Info.plist  LowResRMX-Bridging-Header.h  LowResRMX.entitlements  SceneDelegate.swift
project.ios/LowResRMX.xcodeproj/: project.pbxproj
project.ios/Widgets/: APIClient.swift  ProgramModel.swift  Widgets.swift
project.wasm/: README.md  makefile  player copy.html  player.html  player.js  player.wasm  program.rmx
project.web/: README.md  makefile  player copy.html  player.html  program.nx  sitemap.xml
project.web/bruno/: bruno.json  entry upvote.bru  is_signed.bru  last_published.bru  last_shared.bru  list last post.bru  list ranked post.bru  list user last shared.bru  match.bru  new comment.bru  next comment.bru  post topic.bru  share.bru  update rank.bru  updrank.bru  upload.bru
project.web/sources/: about.css  about.html  about.js  admin.php  chat.css  chat.html  chat.js  comment.php  common.js  common.php  community.css  community.html  community.js  config.js  (+62 more)
sdl-frontend/: dev_menu_data.h  runner.c
test.programs/: 003_BG_axis.nx  004_BG_fill.nx  005_chara_p_set.nx  006_CELL.nx  007_BG_2_3.nx  008_SCROLL.nx  009_64_colors.nx  010_RAM.nx  011_PRINT.nx  012_LOCATE.nx  013_SHOWN.nx  014_SPRITE.nx  015_SAFE.nx  016_TRACE.nx  017_ON_GOTO.nx  018_TRACE.nx  019_ON_GOSUB.nx  020_ON_RASTER.nx  021_CLAMP.nx  022_POKE.nx  023_SPRITE.nx  024_PARTICLE.nx  025_BG_order.nx  026_PLAY.nx  027_EASE.nx  028_SKIP.nx  029_RND.nx  030_RND2.nx  031_DMA.nx  032_NEW_STR.nx  033_BG_COORDS.nx  034_MEM.nx  035_SECONDARY_SEPARATOR.nx  036_DISPLAY_ATTR.nx  037_PEEK_BG_SCROLL.nx  038_PEEK_RASTER.nx  039_PEEK_TOUCH.nx  040_PEEK_SHOWN.nx  041_PEEK_INKEY.nx  042_PEEK_SAFE.nx  (+20 more)
tool.dev/: README.md  README.nope.md  SETUP.md  check_boom.bash  check_leading.bash  compile_wasm_player.bash  convert_manual.bash  convert_manual.js  copy_flutter_assets.bash  fix_manual_header_and_index.bash  generate_sitemap_xml.php  manual_op.bash  merge.bash  merge.h  merge_backcore_for_flutter.bash  merge_backcore_for_flutter.h  minify_css.js  package_web_for_production.bash  redis_backup.bash  remove_post.php
web.community/: README.md
(+302 files in other folders)
